# darling-cfnetwork

./: CMakeLists.txt
darling-framework/include/CFNetwork/: CFCachedURLResponse.h  CFFTPStream.h  CFFTPStreamPriv.h  CFHTTPAuthentication.h  CFHTTPConnectionPriv.h  CFHTTPCookie.h  CFHTTPCookieStorage.h  CFHTTPMessage.h  CFHTTPMessagePriv.h  CFHTTPServerPriv.h  CFHTTPStream.h  CFHTTPStreamPriv.h  CFHost.h  CFHostPriv.h  CFNSURLConnection.h  CFNetDiagnostics.h  CFNetDiagnosticsPriv.h  CFNetServices.h  CFNetServicesPriv.h  CFNetwork.h  CFNetworkDefs.h  CFNetworkErrors.h  CFNetworkPriv.h  CFProxySupport.h  CFServerPriv.h  (+10 more)
include-framework/CFNetwork/: CFCachedURLResponse.h  CFFTPStreamPriv.h  CFHTTPConnectionPriv.h  CFHTTPCookie.h  CFHTTPCookieStorage.h  CFHTTPMessagePriv.h  CFHTTPServerPriv.h  CFHTTPStreamPriv.h  CFHostPriv.h  CFNSURLConnection.h  CFNetDiagnosticsPriv.h  CFNetServicesPriv.h  CFNetworkErrors.h  CFNetworkPriv.h  CFProxySupport.h  CFServerPriv.h  CFURLAuthChallenge.h  CFURLCache.h  CFURLConnection.h  CFURLCredential.h  CFURLProtectionSpace.h  CFURLRequest.h  CFURLResponse.h  NSCFURLSession.h
include/CFNetwork/: CFNSURLConnection.h  CFNetwork.h  CFSocketStream.h  CFSocketStreamPriv.h
src/: CFSocketStream.c  CMakeLists.txt  constants.m  dnssd_stub.c
src/Cookies/: CFHTTPCookie.c
src/HTTP/: CFHTTPAuthentication.c  CFHTTPMessage.c
src/Headers/: CFNetworkDefs.h
src/Host/: CFHost.c
src/Proxies/: ProxySupport.c
src/SharedCode/: CFNetworkSchedule.c
src/URL/: CFNSURLConnection.m  NSURLConnection.m  NSURLProtocol.m  NSURLResponseInternal.h  NSURLSession.m
